# sphinx-theme

./: .gitignore  MANIFEST.in  __init__.py  breadcrumbs.html  footer.html  layout.html  package.json  pyproject.toml  readme.md  searchbox.html  setup.py  theme.conf
_scss/: theme.scss
uu_sphinx_theme/: __init__.py  search.html
